# wasm-ports

./: .gitmodules  build-python-wasi.sh  build-wabt-wasi.sh
.github/workflows/: compile.yml
clang-port/: CMakeLists.txt  build-clang-fix.sh  build-clang-wasi.sh
clang-port/etc/: clang_format.cmake
clang-port/src/: CMakeLists.txt  asm.wat  cc1args.h  clang-fix.cc  depfile.h  lld-fix.cc  stubs.c  wasisnapshot.c  wasisnapshot.wat  wasm-rt-content.h
python/: build-python-wasi.sh
wabt-tools/: CMakeLists.txt  build-wabt-wasi.sh
wabt-tools/src/: CMakeLists.txt  asm.wat  initcomposer.cc  initcomposer.hh  memorystringstream.hh  wasisnapshot.wat  wasm2c-simple.cc
wabt-tools/wabt-cmake/: CMakeLists.txt
